--- a/404.html
+++ b/404.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="css/404.css" />
+    <meta charset="UTF-8">
+    <title>404 Not Woking Here</title>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Bad+Script'>
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-        <div id="container">
-            <!-- to increase performance, we change the opacity of shadow instead of changing the text-shadow directly -->
-            <p id="text"> 404 ERROR</p>
+    <!-- partial:index.partial.html -->
+    <div id="container">
 
-            <p id="shadow">
-                <span id="glow"> 40</span> <span id="blink"> 4 E</span> <span id="glow"> RR</span> <span id="blink"> OR</span>
-            </p>
+        <!-- to increase performance, we change the opacity of shadow instead of changing the text-shadow directly -->
 
-        </div>
+        <p id="text">404 ERROR</p>
+
+        <p id="shadow">
+            <span id="glow">40</span><span id="blink">4 E</span><span id="glow">RR</span><span id="blink">OR</span>
+        </p>
+
+    </div>
+
+
+    <!-- Created by ARiyou2000 -->
+    <!-- partial -->
+    <script src="./script.js"></script>
+
 </body>
 </html>
